--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,20 +13,22 @@
       "args": [],
       "cwd": "${workspaceFolder}",
       "stopAtEntry": false,
-      // "serverReadyAction": {
-      //   "action": "openExternally",
-      //   "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-      // },
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "sourceFileMap": {
         "/Views": "${workspaceFolder}/Views"
       }
+    },
+    {
+      "name": "Docker .NET Core Launch",
+      "type": "docker",
+      "request": "launch",
+      "preLaunchTask": "docker-run: debug",
+      "netCore": {
+        "appProject": "${workspaceFolder}/chuckswAPI.csproj"
+      }
     }
-
-  
-
   ]
 }
 
